# ETW_Demo

./: .gitignore  CMakeLists.txt  Doxyfile.in  Readme.md  WPADemo.sln  commands.txt
HungThreadConsumerProducer/: HungThreadConsumerProducer.cpp  HungThreadConsumerProducer.vcxproj  HungThreadConsumerProducer.vcxproj.filters  hung_console_output.txt
ObjectCreationDemo/: ObjectCreationDemo.cpp  ObjectCreationDemo.vcxproj  ObjectCreationDemo.vcxproj.filters
ThreadingDemo/: ThreadingDemo.cpp  ThreadingDemo.vcxproj  ThreadingDemo.vcxproj.filters
resources/: simple_demo.WPRP
simple_event_tracing_demo/: SimpleTraceLoggingExample.h  TraceLoggerSingleton.h  simple_event_tracing_demo.cpp  simple_event_tracing_demo.vcxproj  simple_event_tracing_demo.vcxproj.filters
src/Gpu_Demo/: gpu_demo.cpp
src/HungThreadConsumerProducer/: HungThreadConsumerProducer.cpp  execute_hung_thread_consumer_producer.bat
src/IOOperations/: io_Operations.cpp
src/ObjectCreationDemo/: ObjectCreationDemo.cpp
src/SimpleEventTracingDemo/: SimpleEventTracing.cpp  TraceLoggerSingleton.h
src/ThreadingDemo/: ThreadingDemo.cpp  execute_threading_demo.bat
